<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/linkedin_blue">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Booking Meeting Room"
                    android:fontFamily="@font/normal_text_font"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/iv_back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:src="?android:attr/homeAsUpIndicator"
                    app:tint="@color/white" />

            </RelativeLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/ll_select_room"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:text="Select Room"/>
                            <RelativeLayout
                                android:id="@+id/rl_select_room"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/edit_text_background">

                                <TextView
                                    android:id="@+id/tv_selected_room"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:textColor="@color/black"
                                    android:soundEffectsEnabled="false"
                                    android:visibility="visible"/>

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:src="@drawable/arrowright"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginRight="5dp"
                                    app:tint="@color/linkedin_blue"
                                    android:visibility="visible"/>
                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:text="Select Meeting Start Date &amp; Time"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:orientation="horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/selectDate"
                                android:textAlignment="center"
                                android:gravity="center_vertical"
                                android:textColor="@color/black"
                                tools:ignore="RtlCompat" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center_vertical"
                                android:background="@color/black_dim"/>

                            <TextView
                                android:id="@+id/tv_time"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textAlignment="center"
                                android:gravity="center_vertical"
                                android:text="@string/selectTime"
                                android:textColor="@color/black"
                                tools:ignore="RtlCompat" />

                        </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:text="Select Meeting End Date &amp; Time"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:orientation="horizontal"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:id="@+id/tv_date_end"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/selectDate"
                                    android:textAlignment="center"
                                    android:gravity="center_vertical"
                                    android:textColor="@color/black"
                                    tools:ignore="RtlCompat" />

                                <View
                                    android:layout_width="1dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center_vertical"
                                    android:background="@color/black_dim"/>

                                <TextView
                                    android:id="@+id/tv_time_end"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:textAlignment="center"
                                    android:gravity="center_vertical"
                                    android:text="@string/selectTime"
                                    android:textColor="@color/black"
                                    tools:ignore="RtlCompat" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:orientation="horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/edit_text_background">
                            <EditText
                                android:id="@+id/et_description"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:textColorHint="@color/light_grey_t"
                                android:textColor="@color/black"
                                android:maxLines="1"
                                android:gravity="top"
                                android:paddingLeft="5dp"
                                android:fontFamily="@font/normal_text_font"
                                android:inputType="textCapWords"
                                android:hint="short description..."/>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/black"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tv_assignment_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booking_instructions"
                            android:fontFamily="@font/normal_text_font"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="22dp"/>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginLeft="40dp">
                                <TextView
                                    android:id="@+id/tv_size"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/normal_text_font"
                                    android:text="@string/instruction_for_booking"
                                    android:textColor="@color/black"
                                    android:layout_marginTop="8dp"/>

                            </LinearLayout>



                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/linkedin_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/normal_text_font"
                android:text="Submit"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_selected_room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/rl_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/colorWhiteTrans"/>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/linkedin_blue" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
